# bigdata-briefs-v2

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  analyst_cost_calculator.html  analyze_chunk_duplicates_across_runs.py  analyze_dead_code.py  briefs_mcp_skill.md  crontab  docker-compose.yml  fly.toml  mixed_dump.txt  mixed_dump_11_20.txt  mixed_report.json  pyproject.toml  run_daily.sh  start.sh
assets/raw/: isometric-diagram.fossflow.json  pipeline-diagram.fossflow.json
bigdata_briefs/: __init__.py  backfill_narratives.py  debug_logger.py  exceptions.py  key_health.py  llm_client.py  mcp_server.py  mcp_server_stateless.py  metrics.py  models.py  pricing.py  run_entity.py  service.py  settings.py  temporal.py  utils.py  weighted_semaphore.py
bigdata_briefs/api/: __init__.py  app.py  auth.py  citation_mapping.py  dependencies.py  schemas.py
bigdata_briefs/attribution/: models.py  sources.py
bigdata_briefs/data/: universe_entity_costs.csv
bigdata_briefs/graph/: __init__.py  constants.py  dependencies.py  graph.py  node_logger.py  state.py
bigdata_briefs/novelty/: __init__.py  bullet_pipeline_checkpoint.py  chunk_filter.py  embedding_client.py  evaluators.py  models.py  novelty_search.py  novelty_service.py  pipeline_checkpoint_storage.py  sql_models.py  sql_pipeline_checkpoint.py  sql_step_wall_timing.py  step_names.py  storage.py  wall_timing.py
bigdata_briefs/orchestration/: __init__.py  config_load.py  db.py  default_pipeline_config.yaml  earnings_calendar_cache.py  entity_runner.py  kg_entities.py  models.py  output.py  portfolio_brief.py  sentiment_ranking.py  stateless_runner.py  windows.py
bigdata_briefs/prompts/: prompt_loader.py  prompts.yaml  user_prompts.py
bigdata_briefs/query_service/: api.py  base.py  models.py  rate_limit.py
bigdata_briefs/report/: html_builder.py
bigdata_briefs/templates/: __init__.py
bigdata_briefs/validation/: __init__.py  base.py  entity_grounding.py
string/Air_Products_Chemicals_Inc_2026-04-16_e0264/: chunk_hash_filter_stats.json  (+2 more)
tests/: conftest.py  test_admin_delete_date.py  test_api_modes.py  test_batch_discarded_from_db.py  test_bullet_pipeline_checkpoint.py  test_bullet_run_log.py  test_citation_mapping.py  test_entity_resolution.py  test_force_overlap.py  test_graph_topology.py  test_llm_client.py  test_map_earnings_calls_on_calendar_day.py  test_novelty_embedding_storage.py  test_novelty_evaluators.py  test_novelty_llm_step_names.py  test_orchestration_kg_entities.py  test_orchestration_output.py  test_orchestration_windows.py  test_scan_universe.py  test_start_end_date.py  test_stateless_runner.py  test_step_wall_timing.py  test_utils.py  test_weighted_semaphore.py
(+167 files in other folders)
