[project]
name = "bigdata_briefs"
version = "4.0.0"
description = "Generate briefs based on finantially relevant information from Bigdata.com "
authors = [{name = "jaldana", email = "jaldana@ravenpack.com"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"

dependencies = [
    "python-dateutil>=2.9.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.2.1",
    "jinja2==3.1.6",
    "openai>=1.95.0",
    "numpy>=2.2.4",
    "pyyaml>=6.0.2",
    "json-repair>=0.40.0",
    "structlog>=25.4.0",
    "bigdata-client==2.19.0",
    "sqlmodel>=0.0.24",
    "fpdf2>=2.8.7",
    "novelty-via-search",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
]

[tool.uv.sources]
novelty-via-search = { path = "../../NoveltyViaSearch", editable = true }

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "freezegun==1.4.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
run-entity = "bigdata_briefs.run_entity:main"

[tool.hatch.build.targets.wheel]
packages = ["bigdata_briefs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Anchor pytest here so runs from this directory do not inherit parent
# Projects/fricigliano/pyproject.toml (parent pytest: --cov=src, asyncio_mode).
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
