[project]
name = "bigdata_briefs"
version = "4.0.0"
description = "Generate briefs based on financially relevant information from Bigdata.com "
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"

dependencies = [
    "python-dateutil>=2.9.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.2.1",
    "jinja2==3.1.6",
    "openai>=1.95.0",
    "numpy>=2.2.4",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.2",
    "json-repair>=0.40.0",
    "structlog>=25.4.0",
    "bigdata-client==2.19.0",
    "sqlmodel>=0.0.24",
    "fpdf2>=2.8.7",
    "langgraph>=0.3.25",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "freezegun==1.4.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
run-entity = "bigdata_briefs.run_entity:main"

[tool.hatch.build.targets.wheel]
packages = ["bigdata_briefs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Anchor pytest here so runs from this directory do not inherit parent config.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
